[tool.poetry]
name = "msaFilesystem"
version = "0.0.7"
description = "Agnostic Abstract Filesystem API which allows to use S3, GCS, Azure Datalake, your local FS, Youtube etc Optimized for use with FastAPI/Pydantic."
authors = ["Stefan Welcker"]
readme = "README.md"
packages = [{include = "msaFilesystem"}]

[tool.poetry.dependencies]
python = "~3.9"
fs = "2.4.16"
six = "1.16.0"
pysmb = "1.2.8"
fs-dlk = "0.1.3"
fs-s3fs = "1.1.1"
fs-gcsfs = "1.5.1"
loguru = "0.6.0"
multidict = "~6.0.4"
pydantic = "1.9.2"
python-dotenv = "0.20.0"
regex = "2022.3.15"
autoflake = "~2.0.1"
black = "~22.6.0"
flake8 = "~6.0.0"
isort = "~5.12.0"
mypy = "~1.0.0"
setuptools = "~67.6.1"
twine = "4.0.1"
fs-webdavfs = "0.4.2"
fs-googledrivefs = "2.3.2"
fs-dropboxfs = "0.2.2.post2"
fs-onedrivefs = "1.1.4"
fs-youtube = "0.3.1"
fs-smbfs = "1.0.7"

[tool.poetry.group.dev.dependencies]
fonttools = "~4.37.3"
mkdocs = "~1.3.1"
mkdocstrings = "~0.23.0"
mkdocstrings-python = "~1.7.0"
mkdocs-material = "~8.4.4"
mkdocs-gen-files = "~0.4.0"
mkdocs-literate-nav = "~0.4.1"
mkdocs-section-index = "~0.3.4"
mkdocs-page-pdf = "~0.1.0"
mkdocs-git-revision-date-localized-plugin = "~1.1.0"
Pygments = "~2.13.0"
Markdown = "~3.3.7"
mdx-include = "~1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"